--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = ""
-  functions = "netlify/functions"
   publish = "backend/build"
+  command = "cd frontend && rm -rf node_modules && npm install && npm run build"
 
 [[redirects]]
   from = "/*"
