--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = ""
+  base = "frontend"
   publish = "backend/build"
-  command = "cd frontend && rm -rf node_modules && npm install && npm run build"
+  command = "rm -rf node_modules && npm install && npm run build"
 
 [[redirects]]
   from = "/*"
