--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://bhratsharma619:CTd4Bllroi9Yseap@projectmanagementtool.jud8g.mongodb.net/?retryWrites=true&w=majority&appName=ProjectManagementTool
+MONGODB_URI = mongodb+srv://bhratsharma619:database1234@projectmanagementtool.jud8g.mongodb.net/?retryWrites=true&w=majority&appName=ProjectManagementTool
